--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,5 +7,8 @@
     },
     "extends": [
       "eslint:recommended"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": [ "error", { "args": "none" } ]
+    }
 }
