--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ test_script:
   - node --version
   - npm --version
   # run tests
-  - mocha dir /S /B *.js | findstr /v /i node_modules | findstr /i /F:/ test --harmony
+  - npm test
 
 # Don't actually build.
 build: off
