[startup] always start the client on npm start

--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -15,6 +15,6 @@ enet_port = 31415
 type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
-autostart = false
-autoconnect = false
+autostart = true
+autoconnect = true
 autorestart = false
