--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -6,8 +6,8 @@
 type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
-autostart = false
-autoconnect = false
+autostart = true
+autoconnect = true
 autorestart = false
 enet_port = 31415
 
