--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -8,8 +8,8 @@ name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
 versionrange = "*"
 channel = ""
-autostart = false
-autoconnect = false
+autostart = true
+autoconnect = true
 autorestart = false
 enet_port = 31415
 
