--- a/config/client/interfaces.toml
+++ b/config/client/interfaces.toml
@@ -5,17 +5,17 @@
 [interfaces.ui-console]
 name = "Inexor Web Console"
 description = "The Inexor Web Console is a web interface for the Inexor Flex command line API. Within the game client the Inexor Web Console rendered on a transparent layer in front of the game."
-path = console
-repository = https://github.com/inexorgame/ui-console.git
+path = "console"
+repository = "https://github.com/inexorgame/ui-console.git"
 
 [interfaces.ui-client-interface]
 name = "Inexor Web Interface"
 description = "The web user interface used in the Inexor Core Client."
-path = client-interface
-repository = https://github.com/inexorgame/ui-client-interface.git
+path = "client-interface"
+repository = "https://github.com/inexorgame/ui-client-interface.git"
 
 [interfaces.ui-flex]
 name = "The Flex user interface"
 description = "The flex user interface used for managing flex"
-path = ui-flex
-repository = https://github.com/inexorgame/ui-flex.git
+path = "ui-flex"
+repository = "https://github.com/inexorgame/ui-flex.git"
