--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "build:ui-client-hud": "cd interfaces/ui-client-hud && npm run build",
     "build:ui-console": "cd interfaces/ui-console && npm run build"
   },
-  "bin": {"inexor-flex": "./bin/inexor.js"},
+  "bin": {
+    "inexor-flex": "./bin/inexor.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/inexorgame/inexor-flex.git"
