[npm] Work around local module issues and enhance README

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0-preview",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "reinstall": "npm install @inexorgame/api @inexorgame/console @inexorgame/context @inexorgame/entities @inexorgame/gameclient @inexorgame/gameserver @inexorgame/instances @inexorgame/interfaces @inexorgame/logger @inexorgame/logging @inexorgame/media @inexorgame/path @inexorgame/profiles @inexorgame/treeclient @inexorgame/types @inexorgame/releases",
+    "postinstall": "npm install server/api src/console src/context src/entities src/gameclient src/gameserver src/instances src/interfaces server/util/logger src/logging src/media server/util/path src/profiles src/releases src/treeclient src/types",
     "start": "node server/index.js --profile  $npm_package_config_profile",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
@@ -39,23 +39,7 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
-    "@inexorgame/api": "file:server/api",
-    "@inexorgame/console": "file:src/console",
-    "@inexorgame/context": "file:src/context",
-    "@inexorgame/entities": "file:src/entities",
-    "@inexorgame/gameclient": "file:src/gameclient",
-    "@inexorgame/gameserver": "file:src/gameserver",
-    "@inexorgame/instances": "file:src/instances",
-    "@inexorgame/interfaces": "file:src/interfaces",
-    "@inexorgame/logger": "file:server/util/logger",
-    "@inexorgame/logging": "file:src/logging",
-    "@inexorgame/media": "file:src/media",
-    "@inexorgame/path": "file:server/util/path",
-    "@inexorgame/profiles": "file:src/profiles",
-    "@inexorgame/releases": "file:src/releases",
     "@inexorgame/tree": "^1.0.3",
-    "@inexorgame/treeclient": "file:src/treeclient",
-    "@inexorgame/types": "file:src/types",
     "circular-json": "^0.3.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
