[npm] Move inexor.js again since npm doesn't ship the bin folder by default

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:ui-console": "cd interfaces/ui-console && npm run build"
   },
   "bin": {
-    "inexor-flex": "bin/inexor.js"
+    "inexor-flex": "inexor.js"
   },
   "repository": {
     "type": "git",
