--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.0-preview8",
+  "version": "0.9.0-preview9",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "preinstall": "npm run localinstall",
-    "localinstall": "yarn add file:server/api/ file:src/console/ file:src/context/ file:src/entities/ file:src/gameclient/ file:src/gameserver/ file:src/instances/ file:src/interfaces/ file:server/util/logger/ file:src/logging/ file:src/media/ file:server/util/path/ file:src/profiles/ file:src/releases/ file:src/treeclient/ file:src/types/",
     "start": "node server/index.js --profile  $npm_package_config_profile",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
@@ -36,6 +34,22 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
+    "@inexorgame/api": "file:server/api",
+    "@inexorgame/console": "file:src/console",
+    "@inexorgame/context": "file:src/context",
+    "@inexorgame/entities": "file:src/entities",
+    "@inexorgame/gameclient": "file:src/gameclient",
+    "@inexorgame/gameserver": "file:src/gameserver",
+    "@inexorgame/instances": "file:src/instances",
+    "@inexorgame/interfaces": "file:src/interfaces",
+    "@inexorgame/logger": "file:server/util/logger",
+    "@inexorgame/logging": "file:src/logging",
+    "@inexorgame/media": "file:src/media",
+    "@inexorgame/path": "file:server/util/path",
+    "@inexorgame/profiles": "file:src/profiles",
+    "@inexorgame/releases": "file:src/releases",
+    "@inexorgame/treeclient": "file:src/treeclient",
+    "@inexorgame/types": "file:src/types",
     "@inexorgame/tree": "^1.0.3",
     "circular-json": "^0.3.1",
     "cors": "^2.8.3",
@@ -49,8 +63,7 @@
     "tomlify": "^0.2.0",
     "wait-on": "^2.0.2",
     "xdg-basedir": "^3.0.0",
-    "yargs": "^7.0.2",
-    "yarn": "^1.1.0"
+    "yargs": "^7.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
