--- a/src/logging/package.json
+++ b/src/logging/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/logging",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Logging configuration",
   "main": "index.js",
   "repository": {
@@ -8,7 +8,8 @@
     "url": "git+https://github.com/inexorgame/inexor-flex.git"
   },
   "keywords": [
-    "inexor", "logging"
+    "inexor",
+    "logging"
   ],
   "author": "The Inexor Team",
   "license": "Zlib",
@@ -18,8 +19,5 @@
   "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "engines": {
     "node": ">=6.9.1"
-  },
-  "private": true,
-  "dependencies": {
   }
 }
