--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.0-preview9",
+  "version": "0.9.0-preview10",
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "start": "node server/index.js --profile  $npm_package_config_profile",
@@ -75,6 +75,13 @@
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0"
   },
+  "bundledDependencies": ["@inexorgame/api", "@inexorgame/console", "@inexorgame/context", "@inexorgame/entities",
+    "@inexorgame/gameclient", "@inexorgame/gameserver", "@inexorgame/instances",
+    "@inexorgame/interfaces", "@inexorgame/logger", "@inexorgame/logging",
+    "@inexorgame/media", "@inexorgame/path", "@inexorgame/profiles",
+    "@inexorgame/releases", "@inexorgame/treeclient", "@inexorgame/types",
+    "@inexorgame/tree"
+  ],
   "config": {
     "profile": "client"
   }
