--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.0-preview5",
+  "version": "0.9.0-preview11",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "postinstall": "npm install server/api/ src/console/ src/context/ src/entities/ src/gameclient/ src/gameserver/ src/instances/ src/interfaces/ server/util/logger/ src/logging/ src/media/ server/util/path/ src/profiles/ src/releases/ src/treeclient/ src/types/",
     "start": "node server/index.js --profile  $npm_package_config_profile",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
@@ -12,11 +11,7 @@
     "lint": "eslint .",
     "dev": "node server/index.js --profile=devenv",
     "server": "node server/index.js --profile=server",
-    "shell": "node inexor shell",
-    "build": "npm run build:ui-flex",
-    "build:ui-flex": "cd interfaces/ui-flex && npm run build",
-    "build:ui-client-hud": "cd interfaces/ui-client-hud && npm run build",
-    "build:ui-console": "cd interfaces/ui-console && npm run build"
+    "shell": "node inexor.js shell"
   },
   "bin": {
     "inexor-flex": "inexor.js"
@@ -39,7 +34,23 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
+    "@inexorgame/api": "^1.0.1",
+    "@inexorgame/console": "^1.0.1",
+    "@inexorgame/context": "^1.0.1",
+    "@inexorgame/entities": "^1.0.1",
+    "@inexorgame/gameclient": "^1.0.1",
+    "@inexorgame/gameserver": "^1.0.1",
+    "@inexorgame/instances": "^1.0.1",
+    "@inexorgame/interfaces": "^1.0.1",
+    "@inexorgame/logger": "^1.0.1",
+    "@inexorgame/logging": "^1.0.1",
+    "@inexorgame/media": "^1.0.1",
+    "@inexorgame/path": "^1.0.1",
+    "@inexorgame/profiles": "^1.0.1",
+    "@inexorgame/releases": "^1.0.1",
     "@inexorgame/tree": "^1.0.3",
+    "@inexorgame/treeclient": "^1.0.1",
+    "@inexorgame/types": "^1.0.1",
     "circular-json": "^0.3.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
@@ -60,6 +71,7 @@
     "chai-iterator": "^1.1.4",
     "eslint": "^3.19.0",
     "jsdoc": "^3.4.3",
+    "lerna": "^2.4.0",
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0"
