[npm] Try to use lerna and upload everything to npm. SUCK IT.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.0-preview10",
+  "version": "0.9.0-preview11",
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "start": "node server/index.js --profile  $npm_package_config_profile",
@@ -34,23 +34,23 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
-    "@inexorgame/api": "file:server/api",
-    "@inexorgame/console": "file:src/console",
-    "@inexorgame/context": "file:src/context",
-    "@inexorgame/entities": "file:src/entities",
-    "@inexorgame/gameclient": "file:src/gameclient",
-    "@inexorgame/gameserver": "file:src/gameserver",
-    "@inexorgame/instances": "file:src/instances",
-    "@inexorgame/interfaces": "file:src/interfaces",
-    "@inexorgame/logger": "file:server/util/logger",
-    "@inexorgame/logging": "file:src/logging",
-    "@inexorgame/media": "file:src/media",
-    "@inexorgame/path": "file:server/util/path",
-    "@inexorgame/profiles": "file:src/profiles",
-    "@inexorgame/releases": "file:src/releases",
-    "@inexorgame/treeclient": "file:src/treeclient",
-    "@inexorgame/types": "file:src/types",
+    "@inexorgame/api": "^1.0.1",
+    "@inexorgame/console": "^1.0.1",
+    "@inexorgame/context": "^1.0.1",
+    "@inexorgame/entities": "^1.0.1",
+    "@inexorgame/gameclient": "^1.0.1",
+    "@inexorgame/gameserver": "^1.0.1",
+    "@inexorgame/instances": "^1.0.1",
+    "@inexorgame/interfaces": "^1.0.1",
+    "@inexorgame/logger": "^1.0.1",
+    "@inexorgame/logging": "^1.0.1",
+    "@inexorgame/media": "^1.0.1",
+    "@inexorgame/path": "^1.0.1",
+    "@inexorgame/profiles": "^1.0.1",
+    "@inexorgame/releases": "^1.0.1",
     "@inexorgame/tree": "^1.0.3",
+    "@inexorgame/treeclient": "^1.0.1",
+    "@inexorgame/types": "^1.0.1",
     "circular-json": "^0.3.1",
     "cors": "^2.8.3",
     "express": "^4.15.2",
@@ -71,17 +71,11 @@
     "chai-iterator": "^1.1.4",
     "eslint": "^3.19.0",
     "jsdoc": "^3.4.3",
+    "lerna": "^2.4.0",
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0"
   },
-  "bundledDependencies": ["@inexorgame/api", "@inexorgame/console", "@inexorgame/context", "@inexorgame/entities",
-    "@inexorgame/gameclient", "@inexorgame/gameserver", "@inexorgame/instances",
-    "@inexorgame/interfaces", "@inexorgame/logger", "@inexorgame/logging",
-    "@inexorgame/media", "@inexorgame/path", "@inexorgame/profiles",
-    "@inexorgame/releases", "@inexorgame/treeclient", "@inexorgame/types",
-    "@inexorgame/tree"
-  ],
   "config": {
     "profile": "client"
   }
