--- a/src/context/package.json
+++ b/src/context/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/context",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Provides an application context.",
   "main": "index.js",
   "repository": {
@@ -19,6 +19,5 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true,
-  "dependencies": {}
+  "private": true
 }
