--- a/src/entities/package.json
+++ b/src/entities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/entities",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Flexible Entity System",
   "main": "index.js",
   "repository": {
@@ -22,7 +22,5 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true,
-  "dependencies": {
-  }
+  "private": true
 }
