--- a/src/console/package.json
+++ b/src/console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/console",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Provides a console",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,5 @@
   "engines": {
     "node": ">=6.9.1"
   },
-  "private": true,
-  "dependencies": {
-  }
+  "private": true
 }
