[cli] Fix the command line path finding when globally installed

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "server": "node server/index.js --profile=server",
     "shell": "node inexor.js shell"
   },
+  "main": "inexor.js",
   "bin": {
     "inexor-flex": "inexor.js"
   },
