--- a/server/util/path/package.json
+++ b/server/util/path/package.json
@@ -21,6 +21,7 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
+    "@inexorgame/inexor-flex": "^0.9.0-preview15",
     "xdg-basedir": "^2.0.0"
   }
 }
