ESLint: Ignore linebreak-style errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-unused-vars": [ "error", { "args": "none" } ]
+      "no-unused-vars": [ "error", { "args": "none" } ],
+      "linebreak-style": "never"
     }
 }
