--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,14 @@ node_js:
   - "6"
   - "7"
   - "8"
-script: npm test && npm run lint
+script:
+  - npm test
+  - npm run lint
+  - npm run docs
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: ${GH_TOKEN}
+  on:
+    branch: master
