--- a/src/releases/package.json
+++ b/src/releases/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "adm-zip": "^0.4.7",
     "follow-redirects": "^1.2.3",
-    "fs-extra": "^4.0.0"
+    "fs-extra": "^4.0.0",
+    "semver": "^5.4.1"
   }
 }
