[release] switch to semver-extra to handle "-alpha" correctly
We have a problem: semversions target is software with version >1.0
our real problem: we don't want to name our software "0.1.0" when its alpha (bc people don't see immediately that its alpha)
the node-semver package simply ignores anything with "-alpha", "-beta".. for all comparisions (making it useless for us)
semver-extra adds better support for that (ignores the prerelease field, but still allows the operations)

--- a/src/releases/package.json
+++ b/src/releases/package.json
@@ -21,6 +21,6 @@
     "adm-zip": "^0.4.7",
     "follow-redirects": "^1.2.3",
     "fs-extra": "^4.0.0",
-    "semver": "^5.4.1"
+    "semver-extra": "^2.0.1"
   }
 }
