--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
     "wait-on": "^2.0.2",
     "xdg-basedir": "^3.0.0",
     "yargs": "^7.0.2",
-    "snyk": "^1.46.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -78,7 +77,8 @@
     "lerna": "^2.5.1",
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
-    "mocha-junit-reporter": "^1.13.0"
+    "mocha-junit-reporter": "^1.13.0",
+    "snyk": "^1.46.0"
   },
   "config": {
     "profile": "client"
