--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "tomlify": "^0.2.0",
     "wait-on": "^2.0.2",
     "xdg-basedir": "^3.0.0",
-    "yargs": "^7.0.2",
+    "yargs": "^7.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
