[release] also add version to devenv instances.toml
its a required field.

--- a/config/server/instances.toml
+++ b/config/server/instances.toml
@@ -6,6 +6,8 @@
 type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
+versionrange = "*"
+channel = ""
 autostart = true
 autoconnect = true
 autorestart = true
