--- a/config/devenv/instances.toml
+++ b/config/devenv/instances.toml
@@ -6,6 +6,10 @@
 type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
+# The semantic release range string to select a release.
+versionrange = "*"
+# The release channel or empty to accept all
+channel = ""
 autostart = false
 autoconnect = false
 autorestart = false
@@ -15,6 +19,10 @@ enet_port = 31415
 type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
+# The semantic release range string to select a release.
+versionrange = "*"
+# The release channel or empty to accept all
+channel = ""
 autostart = false
 autoconnect = false
 autorestart = false
