[releases] make channel * match any.

--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -18,7 +18,7 @@ type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
 versionrange = "*"
-channel = ""
+channel = "*"
 autostart = true
 autoconnect = true
 autorestart = false
