--- a/config/devenv/instances.toml
+++ b/config/devenv/instances.toml
@@ -22,7 +22,7 @@ description = "Badly Configurated Clients Inc. proudly presents your first Inexo
 # The semantic release range string to select a release.
 versionrange = "*"
 # The release channel or empty to accept all
-channel = ""
+channel = "*"
 autostart = false
 autoconnect = false
 autorestart = false
