--- a/config/server/instances.toml
+++ b/config/server/instances.toml
@@ -7,7 +7,7 @@ type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
 versionrange = "*"
-channel = ""
+channel = "*"
 autostart = true
 autoconnect = true
 autorestart = true
