--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -6,7 +6,7 @@
 type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
-versionrange = "*"
+versionrange = "0.x"
 channel = "*"
 autostart = true
 autoconnect = true
@@ -17,7 +17,7 @@ enet_port = 31415
 type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
-versionrange = "*"
+versionrange = "0.x"
 channel = "*"
 autostart = true
 autoconnect = true
