--- a/config/server/instances.toml
+++ b/config/server/instances.toml
@@ -6,7 +6,7 @@
 type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
-versionrange = "*"
+versionrange = "0.x"
 channel = "*"
 autostart = true
 autoconnect = true
