--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -6,8 +6,8 @@
 type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
-versionrange = "0.x"
-channel = "*"
+versionRange = "0.x"
+channelSearch = "*"
 autostart = true
 autoconnect = true
 autorestart = false
@@ -16,8 +16,8 @@ autorestart = false
 type = "client"
 name = "Default production client"
 description = "Badly Configurated Clients Inc. proudly presents your first Inexor Client"
-versionrange = "0.x"
-channel = "*"
+versionRange = "0.x"
+channelSearch = "*"
 autostart = true
 autoconnect = true
 autorestart = false
