--- a/config/server/instances.toml
+++ b/config/server/instances.toml
@@ -7,9 +7,9 @@ type = "server"
 name = "Default production server"
 description = "Badly Configurated Servers Inc. proudly presents your first Inexor Server"
 # The semantic release range string to select a release.
-versionrange = "0.x"
+versionRange = "0.x"
 # The release channel or empty to accept all
-channel = "*"
+channelSearch = "*"
 autostart = true
 autoconnect = true
 autorestart = true
