--- a/config/serverfarm/instances.toml
+++ b/config/serverfarm/instances.toml
@@ -7,9 +7,9 @@ type = "server"
 name = "Inexor Server Farm #1"
 description = "Badly Configurated Server Farm Inc. proudly presents your first Inexor Server"
 # The semantic release range string to select a release.
-versionrange = "0.x"
+versionRange = "0.x"
 # The release channel or empty to accept all
-channel = "*"
+channelSearch = "*"
 autostart = true
 autoconnect = true
 autorestart = true
@@ -19,9 +19,9 @@ type = "server"
 name = "Inexor Server Farm #2"
 description = "Badly Configurated Server Farm Inc. proudly presents your second Inexor Server"
 # The semantic release range string to select a release.
-versionrange = "0.x"
+versionRange = "0.x"
 # The release channel or empty to accept all
-channel = "*"
+channelSearch = "*"
 autostart = true
 autoconnect = true
 autorestart = true
@@ -31,9 +31,9 @@ type = "server"
 name = "Inexor Server Farm #3"
 description = "Badly Configurated Server Farm Inc. proudly presents your third Inexor Server"
 # The semantic release range string to select a release.
-versionrange = "0.x"
+versionRange = "0.x"
 # The release channel or empty to accept all
-channel = "*"
+channelSearch = "*"
 autostart = true
 autoconnect = true
 autorestart = true
