--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "lerna": "^2.5.1",
     "minami": "^1.1.1",
     "mocha": "^3.2.0",
-    "mocha-junit-reporter": "^1.13.0"
+    "mocha-junit-reporter": "^1.13.0",
+    "nsp": "^2.8.1"
   },
   "config": {
     "profile": "client"
