--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.9.0-preview20",
   "description": "Scripting environment for Inexor.",
   "scripts": {
-    "prestart": "npm up",
     "start": "node server/index.js --profile  $npm_package_config_profile",
+    "poststart": "npm up",
     "stop": "./inexor flex shutdown",
     "restart": "./inexor flex restart",
     "test": "mocha \"src/*/test/*.js\" \"server/test/*.js\" \"server/*/*/test/*.js\" --harmony",
