--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "circular-json": "^0.4.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
+    "express-ipfilter": "^0.3.1",
     "express-ws": "^3.0.0",
     "figlet": "^1.2.0",
     "helmet": "^3.9.0",
