--- a/src/media/package.json
+++ b/src/media/package.json
@@ -28,6 +28,7 @@
     "node": ">=6.9.1"
   },
   "dependencies": {
-    "nodegit": "^0.20.3"
+    "nodegit": "^0.20.3",
+    "progress": "^2.0.0"
   }
 }
