--- a/src/releases/package.json
+++ b/src/releases/package.json
@@ -21,6 +21,7 @@
     "adm-zip": "^0.4.7",
     "follow-redirects": "^1.2.3",
     "fs-extra": "^4.0.0",
+    "progress": "^2.0.0",
     "semver": "^5.4.1"
   }
 }
