[release] Add 0.9.0 release - adds stability tweaks for the repositories, interfaces and release downloader

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.0-preview23",
+  "version": "0.9.0",
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "start": "node server/index.js --profile  $npm_package_config_profile",
@@ -36,22 +36,22 @@
     "npm": ">=3.0.0"
   },
   "dependencies": {
-    "@inexorgame/api": "^1.0.6",
+    "@inexorgame/api": "^1.0.9",
     "@inexorgame/console": "^1.0.1",
     "@inexorgame/context": "^1.0.3",
     "@inexorgame/entities": "^1.0.1",
     "@inexorgame/gameclient": "^1.0.1",
     "@inexorgame/gameserver": "^1.0.1",
     "@inexorgame/instances": "^1.0.4",
-    "@inexorgame/interfaces": "^1.0.4",
-    "@inexorgame/logger": "^1.0.6",
-    "@inexorgame/logging": "^1.0.5",
-    "@inexorgame/media": "^1.0.7",
-    "@inexorgame/path": "^1.0.6",
+    "@inexorgame/interfaces": "^1.0.6",
+    "@inexorgame/logger": "^1.0.8",
+    "@inexorgame/logging": "^1.0.7",
+    "@inexorgame/media": "^1.0.9",
+    "@inexorgame/path": "^1.0.8",
     "@inexorgame/profiles": "^1.0.1",
-    "@inexorgame/releases": "^1.0.4",
-    "@inexorgame/tree": "^1.0.7",
-    "@inexorgame/treeclient": "^1.0.7",
+    "@inexorgame/releases": "^1.0.5",
+    "@inexorgame/tree": "^1.0.9",
+    "@inexorgame/treeclient": "^1.0.9",
     "@inexorgame/types": "^1.0.1  ",
     "circular-json": "^0.4.0",
     "cors": "^2.8.3",
