--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
     "eslint-plugin-security": "^1.4.0",
     "jsdoc": "^3.4.3",
     "lerna": "^2.5.1",
-    "minami": "^1.1.1",
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0",
-    "nsp": "^2.8.1"
+    "nsp": "^2.8.1",
+    "tui-jsdoc-template": "^1.2.2"
   },
   "config": {
     "profile": "client"
