chore(release): fix versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.1-alpha",
+  "version": "0.9.2",
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "start": "node server/index.js --profile  $npm_package_config_profile",
@@ -47,11 +47,11 @@
     "@inexorgame/logger": "^1.0.8",
     "@inexorgame/logging": "^1.0.7",
     "@inexorgame/media": "^1.0.9",
-    "@inexorgame/path": "^1.0.10",
+    "@inexorgame/path": "^1.0.12",
     "@inexorgame/profiles": "^1.0.1",
     "@inexorgame/releases": "^1.0.5",
     "@inexorgame/tree": "^1.0.9",
-    "@inexorgame/treeclient": "^1.0.9",
+    "@inexorgame/treeclient": "^1.0.12",
     "@inexorgame/types": "^1.0.1  ",
     "circular-json": "^0.4.0",
     "cors": "^2.8.3",
@@ -73,6 +73,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-iterator": "^1.1.4",
+    "debug": "^3.1.0",
     "eslint": "^4.14.0",
     "eslint-plugin-security": "^1.4.0",
     "jsdoc": "^3.5.5",
