--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "express-uws": "^3.0.0",
     "figlet": "^1.2.0",
     "helmet": "^3.9.0",
+    "isarray": "^2.0.2",
     "npid": "^0.4.0",
     "portscanner": "^2.1.1",
     "prettyjson": "^1.2.1",
