--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,15 +4,13 @@ environment:
     - nodejs_version: "6"
     - nodejs_version: "7"
     - nodejs_version: "8"
+    - nodejs_version: "9"
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js
   - ps: Install-Product node $env:nodejs_version
-  # install modules
-  - git submodule update --init
   - npm install -g mocha
-  - npm install -g nsp
   - npm install
 
 # Post-install test scripts.
@@ -23,7 +21,6 @@ test_script:
   # run tests
   - npm test
   - npm run lint
-  - npm run nsp
 
 # Don't actually build.
 build: off
