enhancement(ci): Publish to npm registry on every commit to master
This also creates a commit increasing the version number in package.json and package-lock.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ jobs:
       os: linux
       sudo: false
       dist: trusty
-      script: chmod +x ./tool/travis_create_tag.sh && ./tool/travis_create_tag.sh
+      script: export main_repo="inexorgame/inexor-flex" && chmod +x ./tool/travis_create_tag.sh && ./tool/travis_create_tag.sh && chmod +x ./tool/travis_publish_npm.sh && ./tool/travis_publish_npm.sh
       GITHUB_TOKEN: ${GITHUB_TOKEN}
       branches:
         only:
