--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ notifications:
 
 language: node_js
 node_js:
-  #- "6"
+  - "6"
   - "8"
-  #- "9"
+  - "9"
 
 os:
   - linux
-  # - osx
+  - osx
 
 script:
   - npm test
