Set autoconnect to true as well to fix issue #575

--- a/config/client/instances.toml
+++ b/config/client/instances.toml
@@ -9,7 +9,7 @@ description = "Badly Configurated Servers Inc. proudly presents your first Inexo
 versionRange = "0.x"
 channelSearch = "*"
 autostart = true
-autoconnect = false
+autoconnect = true
 autorestart = false
 
 [instances.31417]
