--- a/src/entities/package.json
+++ b/src/entities/package.json
@@ -21,5 +21,6 @@
   "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "engines": {
     "node": ">=6.9.1"
-  }
+  },
+  "private": "true"
 }
