--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ jspm_packages
 # Optional npm cache directory and yarn
 .npm
 yarn.lock
+package-lock.json
 
 # Optional REPL history
 .node_repl_history
