--- a/src/console/package.json
+++ b/src/console/package.json
@@ -19,5 +19,6 @@
   "homepage": "https://github.com/inexorgame/inexor-flex#readme",
   "engines": {
     "node": ">=6.9.1"
-  }
+  },
+  "private": "true"
 }
