--- a/src/interfaces/package.json
+++ b/src/interfaces/package.json
@@ -20,6 +20,7 @@
   "engines": {
     "node": ">=6.9.1"
   },
+  "private": "true",
   "dependencies": {
     "nodegit": "^0.20.3",
     "progress": "^2.0.0",
