--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inexorgame/inexor-flex",
-  "version": "0.9.4",
+  "version": "0.9.8",
   "description": "Scripting environment for Inexor.",
   "scripts": {
     "start": "node server/index.js --profile  $npm_package_config_profile",
@@ -33,23 +33,6 @@
     "yarn": ">=1.3.2"
   },
   "dependencies": {
-    "@inexorgame/api": "file:./server/api/",
-    "@inexorgame/console": "file:./src/console/",
-    "@inexorgame/context": "file:./src/context/",
-    "@inexorgame/entities": "file:./src/entities/",
-    "@inexorgame/gameclient": "file:./src/gameclient/",
-    "@inexorgame/gameserver": "file:./src/gameserver/",
-    "@inexorgame/instances": "file:./src/instances/",
-    "@inexorgame/interfaces": "file:./src/interfaces/",
-    "@inexorgame/logger": "file:./server/util/logger/",
-    "@inexorgame/logging": "file:./src/logging/",
-    "@inexorgame/media": "file:./src/media/",
-    "@inexorgame/path": "file:./server/util/path/",
-    "@inexorgame/profiles": "file:./src/profiles/",
-    "@inexorgame/releases": "file:./src/releases/",
-    "@inexorgame/tree": "file:./src/tree/",
-    "@inexorgame/treeclient": "file:./src/treeclient",
-    "@inexorgame/types": "file:./src/types/",
     "circular-json": "^0.4.0",
     "cors": "^2.8.3",
     "express": "^4.15.2",
@@ -79,6 +62,25 @@
     "mocha-junit-reporter": "^1.13.0",
     "nsp": "^3.2.1",
     "tui-jsdoc-template": "^1.2.2"
+  },
+  "bundledDependencies": {
+    "@inexorgame/api": "file:./server/api/",
+    "@inexorgame/console": "file:./src/console/",
+    "@inexorgame/context": "file:./src/context/",
+    "@inexorgame/entities": "file:./src/entities/",
+    "@inexorgame/gameclient": "file:./src/gameclient/",
+    "@inexorgame/gameserver": "file:./src/gameserver/",
+    "@inexorgame/instances": "file:./src/instances/",
+    "@inexorgame/interfaces": "file:./src/interfaces/",
+    "@inexorgame/logger": "file:./server/util/logger/",
+    "@inexorgame/logging": "file:./src/logging/",
+    "@inexorgame/media": "file:./src/media/",
+    "@inexorgame/path": "file:./server/util/path/",
+    "@inexorgame/profiles": "file:./src/profiles/",
+    "@inexorgame/releases": "file:./src/releases/",
+    "@inexorgame/tree": "file:./src/tree/",
+    "@inexorgame/treeclient": "file:./src/treeclient",
+    "@inexorgame/types": "file:./src/types/"
   },
   "config": {
     "profile": "client"
